#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Translator
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-28
2014-07-18 David Schneider
- fix issue with event data appearing in both beginCalib and event.
  trac ticket:317

Tag: V00-01-27
2014-07-17 David Schneider
- Move h5 file closing from destructor to endJob. Address trac ticket #316
- Move initialization into beginJob
- Clarify documentation for calibration filtering

Tag: V00-01-26
2014-07-16 David Schneider
- Protect against distinct configStore keys that map to the same hdf5 path.
  Such distinct keys should be for duplicate data, see
  https://pswww.slac.stanford.edu/trac/psdm/ticket/279#comment:16

Tag: V00-01-25
2014-07-10 David Schneider
- Adjust unit test for new version of numpy
  address warning on rhel6

Tag: V00-01-24
2014-07-09 David Schneider
- Better implementation of master file. Only last
  few calib cycles may be dangling.

Tag: V00-01-23
2014-07-08 David Schneider
- Fix timing message

Tag: V00-01-22
2014-07-07 David Schneider
- Fix spelling in default_psana.cfg

Tag: V00-01-21
2014-07-07 David Schneider
- Add SplitScan mode.
  Basic implementation of master file:
  some external links are dangling during translation.
- Re-enable calibration unit tests.
  Use snapshot of calibration files. 
  pedestal appears to have changed, adjust unit test
 
Tag: V00-01-20
2014-07-03 David Schneider
- update to new pdsdata with BldEBeamV6

Tag: V00-01-19
2014-06-30 David Schneider
- Translate pixel gain V1 calibration data if present
- document quiet switch for no output

Tag: V00-01-18
2014-06-25 David Schneider
- report Translator event processing time as percentage of total time.